<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_product"
            android:icon="@drawable/ic_premium"
            android:title="@string/product" />
        <item
            android:id="@+id/nav_privacy_policy"
            android:icon="@drawable/ic_security_black_24dp"
            android:title="@string/menu_privacy" />
        <item
            android:id="@+id/nav_t_c"
            android:icon="@drawable/ic_collections_bookmark_black_24dp"
            android:title="@string/menu_t_c" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_error_outline_black_24dp"
            android:title="@string/menu_about" />
        <item
            android:id="@+id/nav_log_out"
            android:icon="@drawable/ic_settings_power_black_24dp"
            android:title="@string/menu_log_out" />
    </group>


</menu>
